@@ -1,17 +1,31 @@
 package com.soldesk6F.ondal.useract.payment.service;
 
+import java.nio.charset.StandardCharsets;
+import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.Base64;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.client.HttpClientErrorException;
+import org.springframework.web.client.RestTemplate;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonMappingException;
@@ -32,20 +46,8 @@ import com.soldesk6F.ondal.useract.order.repository.OrderRepository;
 import com.soldesk6F.ondal.useract.payment.dto.CartItemsDTO;
 import com.soldesk6F.ondal.useract.payment.dto.TossPaymentResponse;
 import com.soldesk6F.ondal.useract.payment.dto.UserInfoDTO;
-import org.springframework.web.client.HttpClientErrorException;
-import org.springframework.web.client.RestTemplate;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.*;
-import org.springframework.messaging.simp.SimpMessagingTemplate;
-import java.nio.charset.StandardCharsets;
-import java.security.Principal;
-import java.util.Base64;
-import java.util.HashMap;
-import java.util.Map;
 import com.soldesk6F.ondal.useract.payment.entity.Payment;
 import com.soldesk6F.ondal.useract.payment.entity.Payment.PaymentMethod;
-import com.soldesk6F.ondal.useract.payment.entity.Payment.PaymentStatus;
-import com.soldesk6F.ondal.useract.payment.entity.Payment.PaymentUsageType;
 import com.soldesk6F.ondal.useract.payment.repository.PaymentRepository;
 
 import lombok.RequiredArgsConstructor;
@@ -61,12 +63,10 @@ public class PaymentService {
 	private final OrderService orderService;
 	private final OrderDetailRepository orderDetailRepository;
 	private final PaymentRepository paymentRepository;
-    private final UserRepository userRepository;
-	
-	
+	private final UserRepository userRepository;
+
 	@Value("${toss.secret-key}")
-    private String tossSecretKey;
-	
+	private String tossSecretKey;
 
 	public List<CartItemsDTO> getAllCartItems(UUID cartUUID) {
 		Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
@@ -92,14 +92,12 @@ public class PaymentService {
 					throw new IllegalArgumentException("카트에 담긴 아이템이 없습니다");
 				} else {
 					return items.stream().map(item -> {
-						
-					    List<String> options = (item.getOptions() == null)
-					            ? List.of("옵션없음")
-					            : Arrays.asList(item.getOptions().split("온달"));
-						
+
+						List<String> options = (item.getOptions() == null) ? List.of("옵션없음")
+								: Arrays.asList(item.getOptions().split("온달"));
+
 						return CartItemsDTO.builder().menuName(item.getMenu().getMenuName())
-								.menuPrice(item.getMenu().getPrice())
-								.optionNames(options)
+								.menuPrice(item.getMenu().getPrice()).optionNames(options)
 								.optionTotalPrice(item.getOptionTotalPrice()).quantity(item.getQuantity())
 								.totalPrice(item.getItemTotalPrice()).menuImg(item.getMenu().getMenuImg()).build();
 
@@ -109,42 +107,39 @@ public class PaymentService {
 			}
 
 		}
-	    throw new IllegalStateException("결제 요청을 처리할 수 없습니다");
+		throw new IllegalStateException("결제 요청을 처리할 수 없습니다");
 	}
-	
-	
+
 	public int getListTotalPrice(List<CartItemsDTO> cids) {
 		int total = 0;
-		for(CartItemsDTO cid : cids) {
+		for (CartItemsDTO cid : cids) {
 			total += cid.getTotalPrice();
 		}
 		return total;
 	}
-	
-	
-	public UserInfoDTO getUserInfo(UUID cartUUID){
-		
+
+	public UserInfoDTO getUserInfo(UUID cartUUID) {
+
 		Cart cart = cartRepository.getById(cartUUID);
-		if(cart == null) throw new IllegalStateException("해당하는 유저가 없습니다");
-		
-		return UserInfoDTO.builder()
-			    .userLoc(cart.getUser().getUserSelectedAddress().getAddress())
-			    .userSepLoc(cart.getUser().getUserSelectedAddress().getDetailAddress())
-			    .userTel(cart.getUser().getUserPhone())
-			    .build();
-				
-		
+		if (cart == null)
+			throw new IllegalStateException("해당하는 유저가 없습니다");
+
+		return UserInfoDTO.builder().userLoc(cart.getUser().getUserSelectedAddress().getAddress())
+				.userSepLoc(cart.getUser().getUserSelectedAddress().getDetailAddress())
+				.userTel(cart.getUser().getUserPhone()).build();
+
 	}
-	
-	public String getCartStore (UUID cartUUID) {
-		
+
+	public String getCartStore(UUID cartUUID) {
+
 		Cart cart = cartRepository.getById(cartUUID);
-		if(cart ==null) throw new IllegalStateException("해당하는 카트가 없습니다");
-		
+		if (cart == null)
+			throw new IllegalStateException("해당하는 카트가 없습니다");
+
 		return cart.getStore().getStoreName();
-		
+
 	}
-	
+
 //	public String confirmPayment(String paymentKey, String orderId, int amount) {
 //	    String url = "https://api.tosspayments.com/v1/payments/confirm";
 //
@@ -177,117 +172,144 @@ public class PaymentService {
 //	        return "<pre>토스 결제 승인 에러:\n" + e.getResponseBodyAsString() + "</pre>";
 //	    }
 //	}
-	
+
 	@Transactional
 	public void confirmPayment(String paymentKey, String orderId, int amount) {
-	    String url = "https://api.tosspayments.com/v1/payments/confirm";
+		String url = "https://api.tosspayments.com/v1/payments/confirm";
 
-	    Map<String, Object> requestBody = new HashMap<>();
-	    requestBody.put("paymentKey", paymentKey);
-	    requestBody.put("orderId", orderId);
-	    requestBody.put("amount", amount);
+		Map<String, Object> requestBody = new HashMap<>();
+		requestBody.put("paymentKey", paymentKey);
+		requestBody.put("orderId", orderId);
+		requestBody.put("amount", amount);
 
-	    String encodedKey = Base64.getEncoder()
-	        .encodeToString((tossSecretKey + ":").getBytes(StandardCharsets.UTF_8));
+		String encodedKey = Base64.getEncoder().encodeToString((tossSecretKey + ":").getBytes(StandardCharsets.UTF_8));
 
-	    HttpHeaders headers = new HttpHeaders();
-	    headers.setContentType(MediaType.APPLICATION_JSON);
-	    headers.set("Authorization", "Basic " + encodedKey);
+		HttpHeaders headers = new HttpHeaders();
+		headers.setContentType(MediaType.APPLICATION_JSON);
+		headers.set("Authorization", "Basic " + encodedKey);
 
-	    HttpEntity<Map<String, Object>> entity = new HttpEntity<>(requestBody, headers);
-	    RestTemplate restTemplate = new RestTemplate();
+		HttpEntity<Map<String, Object>> entity = new HttpEntity<>(requestBody, headers);
+		RestTemplate restTemplate = new RestTemplate();
 
-	    try {
-	        ResponseEntity<String> response = restTemplate.postForEntity(url, entity, String.class);
-	        if (!response.getStatusCode().is2xxSuccessful()) {
-	            throw new IllegalStateException("결제 승인 실패: " + response.getBody());
-	            
-	        }
-	        ObjectMapper objectMapper = new ObjectMapper();
-	        TossPaymentResponse tossResponse=null;
+		try {
+			ResponseEntity<String> response = restTemplate.postForEntity(url, entity, String.class);
+			if (!response.getStatusCode().is2xxSuccessful()) {
+				throw new IllegalStateException("결제 승인 실패: " + response.getBody());
+
+			}
+			ObjectMapper objectMapper = new ObjectMapper();
+			TossPaymentResponse tossResponse = null;
 			try {
 				tossResponse = objectMapper.readValue(response.getBody(), TossPaymentResponse.class);
 			} catch (JsonMappingException e) {
 				e.printStackTrace();
 			} catch (JsonProcessingException e) {
 				e.printStackTrace();
-			} 
-	        UUID cartUUID = UUID.fromString(orderId);
-	        
-	        Optional<Cart> optCart = cartRepository.findById(cartUUID);
-	        Cart cart = optCart.orElseThrow(() -> new IllegalArgumentException("존재하지 않는 카트입니다."));
-	        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-	        CustomUserDetails cud = (CustomUserDetails) auth.getPrincipal();
-	        User user = cud.getUser();
-	        
-	        List<OrderDetail> orderDetailList = new ArrayList<OrderDetail>();
-	        
-	        Order order = null;
-	        for(CartItems cartItem : cart.getCartItems()) {
-	        	OrderDetail orderDetail = new OrderDetail();
-	        	
-	        	orderDetail.setMenu(cartItem.getMenu());
-	        	orderDetail.setPrice(cartItem.getItemTotalPrice());
-	        	orderDetail.setQuantity(cartItem.getQuantity());
-	        	orderDetail.setOptionNames(cartItem.getOptionsAsList());
-	        	List<Integer> ciop = new ArrayList<Integer>();
-	        	for(CartItemOption cartItemOption : cartItem.getCartItemOptions()) {
-	        		ciop.add(cartItemOption.getOptionPrice());
-	        	}
-	        	orderDetail.setOptionPrices(ciop);
-	        	orderDetailList.add(orderDetail);
-	        }
-	        
-	        
-	        
-	        order = Order.builder()
-	        	    .store(cart.getStore())
-	        	    .user(cart.getUser())
-	        	    .totalPrice(tossResponse.getTotalAmount())
-	        	    .storeRequest(tossResponse.getMetadata().getReqStore())
-	        	    .deliveryRequest(tossResponse.getMetadata().getReqDel())
-	        	    .orderDetails(orderDetailList)
-	        	    .deliveryAddress(user.getUserSelectedAddress().getAddress())
-	        	    .deliveryAddressLatitude(user.getUserSelectedAddress().getUserAddressLatitude())
-	        	    .deliveryAddressLongitude(user.getUserSelectedAddress().getUserAddressLongitude())
-	        	    .build();
-	       for(OrderDetail od : order.getOrderDetails()) {
-	    	   od.setOrder(order);
-	       }     		
-	       
-	        orderRepository.save(order);
-	        cartRepository.deleteById(cartUUID);
-	        
-	        
-	    } catch (HttpClientErrorException e) {
-	        throw new IllegalArgumentException("토스 결제 승인 에러: " + e.getResponseBodyAsString(), e);
-	    }
+			}
+			UUID cartUUID = UUID.fromString(orderId);
+
+			Optional<Cart> optCart = cartRepository.findById(cartUUID);
+			Cart cart = optCart.orElseThrow(() -> new IllegalArgumentException("존재하지 않는 카트입니다."));
+			Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+			CustomUserDetails cud = (CustomUserDetails) auth.getPrincipal();
+			User user = cud.getUser();
+
+			List<OrderDetail> orderDetailList = new ArrayList<OrderDetail>();
+
+			Order order = null;
+			for (CartItems cartItem : cart.getCartItems()) {
+				OrderDetail orderDetail = new OrderDetail();
+
+				orderDetail.setMenu(cartItem.getMenu());
+				orderDetail.setPrice(cartItem.getItemTotalPrice());
+				orderDetail.setQuantity(cartItem.getQuantity());
+				orderDetail.setOptionNames(cartItem.getOptionsAsList());
+				List<Integer> ciop = new ArrayList<Integer>();
+				for (CartItemOption cartItemOption : cartItem.getCartItemOptions()) {
+					ciop.add(cartItemOption.getOptionPrice());
+				}
+				orderDetail.setOptionPrices(ciop);
+				orderDetailList.add(orderDetail);
+			}
+
+			order = Order.builder().store(cart.getStore()).user(cart.getUser())
+					.totalPrice(tossResponse.getTotalAmount()).storeRequest(tossResponse.getMetadata().getReqStore())
+					.deliveryRequest(tossResponse.getMetadata().getReqDel()).orderDetails(orderDetailList)
+					.deliveryAddress(user.getUserSelectedAddress().getAddress())
+					.deliveryAddressLatitude(user.getUserSelectedAddress().getUserAddressLatitude())
+					.deliveryAddressLongitude(user.getUserSelectedAddress().getUserAddressLongitude()).build();
+			for (OrderDetail od : order.getOrderDetails()) {
+				od.setOrder(order);
+			}
+
+			orderRepository.save(order);
+			cartRepository.deleteById(cartUUID);
+
+		} catch (HttpClientErrorException e) {
+			throw new IllegalArgumentException("토스 결제 승인 에러: " + e.getResponseBodyAsString(), e);
+		}
 	}
-	
-	
-    
 
-    @Transactional
-    public void processOndalWalletPayment(UUID userUuid, String paymentKey, String tossOrderId, int amount) {
-        // 유저 조회
-        User user = userRepository.findById(userUuid).orElseThrow();
+	@Transactional
+	public void confirmOndalWalletCharge(String paymentKey, String orderId, int amount, UUID userUUID) {
+		String url = "https://api.tosspayments.com/v1/payments/confirm";
 
-        // Payment 객체 생성 및 저장
-        Payment payment = Payment.builder()
-            .user(user)
-            .paymentKey(paymentKey)
-            .tossOrderId(tossOrderId)
-            .amount(amount)
-            .paymentMethod(PaymentMethod.CREDIT) // 추후 CASH도 지원 가능
-            .paymentStatus(PaymentStatus.COMPLETED)
-            .paymentUsageType(PaymentUsageType.ONDAL_WALLET)
-            .build();
+		Map<String, Object> requestBody = new HashMap<>();
+		requestBody.put("paymentKey", paymentKey);
+		requestBody.put("orderId", orderId);
+		requestBody.put("amount", amount);
 
-        paymentRepository.save(payment);
+		String encodedKey = Base64.getEncoder().encodeToString((tossSecretKey + ":").getBytes(StandardCharsets.UTF_8));
+		System.out.println("Encoded Key: " + encodedKey);
+		System.out.println("Decoded: " + new String(Base64.getDecoder().decode(encodedKey)));
+		HttpHeaders headers = new HttpHeaders();
+		headers.setContentType(MediaType.APPLICATION_JSON);
+		headers.set("Authorization", "Basic " + encodedKey);
 
-        // ondalWallet 금액 증가
-        int currentWallet = user.getOndalWallet();
-        user.setOndalWallet(currentWallet + amount);
-        userRepository.save(user); // dirty checking 돼도 되지만 명시적으로 저장
-    }
+		HttpEntity<Map<String, Object>> entity = new HttpEntity<>(requestBody, headers);
+		RestTemplate restTemplate = new RestTemplate();
+		System.out.println("paymentKey: " + paymentKey);
+		System.out.println("orderId: " + orderId);
+		System.out.println("amount: " + amount);
+		
+		try {
+			ResponseEntity<String> response = restTemplate.postForEntity(url, entity, String.class);
+
+			if (!response.getStatusCode().is2xxSuccessful()) {
+				throw new IllegalStateException("결제 승인 실패: " + response.getBody());
+			}
+
+			ObjectMapper objectMapper = new ObjectMapper();
+			TossPaymentResponse tossResponse = objectMapper.readValue(response.getBody(), TossPaymentResponse.class);
+
+			User user = userRepository.findById(userUUID)
+					.orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
+
+			// 기존 ondalPay 값에 충전금액 추가
+			user.setOndalPay(user.getOndalPay() + tossResponse.getTotalAmount());
+
+			PaymentMethod method = tossResponse.getMethod().equals("카드") ? Payment.PaymentMethod.CREDIT
+					: Payment.PaymentMethod.CASH;
+
+			LocalDateTime approvedAt = OffsetDateTime.parse(tossResponse.getApprovedAt()).toLocalDateTime();
+
+			Payment payment = Payment.builder().user(user).order(null) // 지갑 충전이라면 null
+					.paymentKey(tossResponse.getPaymentKey()).tossOrderId(tossResponse.getOrderId())
+					.paymentMethod(method).amount(tossResponse.getTotalAmount())
+					.paymentUsageType(Payment.PaymentUsageType.ONDAL_WALLET)
+					.paymentStatus(Payment.PaymentStatus.COMPLETED).refundReason(null).build();
+
+			payment.setApprovedAt(approvedAt);
+			paymentRepository.save(payment);
+
+			// user 저장
+			userRepository.save(user);
+
+		} catch (HttpClientErrorException e) {
+			throw new IllegalArgumentException("토스 결제 승인 에러: " + e.getResponseBodyAsString(), e);
+		} catch (JsonProcessingException e) {
+			throw new IllegalStateException("토스 응답 파싱 실패", e);
+		}
+	}
+
 }
